--- a/msglist.html
+++ b/msglist.html
@@ -70,7 +70,7 @@
 </head>
 <body>
   <div class="container">
-    <img class="logo" src="https://cdn.discordapp.com/attachments/1118462097727172740/1126804989256400937/reuvendevLOGO.png" alt="Logo">
+    <img class="logo" src="/img/reuvendevLOGO.png" alt="Logo">
     <h1>Message List</h1>
     <ul id="messageList"></ul>
   </div>
