--- a/msgrvndv.html
+++ b/msgrvndv.html
@@ -69,7 +69,7 @@
 <body>
 
   <div class="container" id="messageContainer">
-    <img class="logo" src="https://cdn.discordapp.com/attachments/1118462097727172740/1126804989256400937/reuvendevLOGO.png" alt="Logo">
+    <img class="logo" src="/img/reuvendevLOGO.png" alt="Logo">
     <h1>Anonymous Message</h1>
     <hr>
     <b><p id="message"></p></b>
