--- a/msgrvndv.html
+++ b/msgrvndv.html
@@ -69,7 +69,7 @@
 
   <div class="container" id="messageContainer">
     <img class="logo" src="/img/reuvendevLOGO.png" alt="Logo">
-    <h1>Anonymous Message</h1>
+    <!-- <h1>Anonymous Message</h1> -->
     <hr>
     <b><p id="message"></p></b>
   </div>
